--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -58,22 +58,32 @@ jobs:
     name: Build and push Docker image
     steps:
       - uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build Docker image
-        run: docker build . --tag ghcr.io/cpwc/aws-quota-checker:latest
+
       - name: Push Docker image for branch
         if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' }}
-        run: |
-          docker tag ghcr.io/cpwc/aws-quota-checker:latest ghcr.io/cpwc/aws-quota-checker:master
-          docker push ghcr.io/cpwc/aws-quota-checker:master
-      - name: Push Docker image for tag
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: master
+          platforms: linux/amd64,linux/arm64
+
+      - name: Push Docker image for branch
         if: ${{ startsWith(github.ref, 'refs/tags') && github.event_name == 'push' }}
-        run: |
-          docker tag ghcr.io/cpwc/aws-quota-checker:latest ghcr.io/cpwc/aws-quota-checker:${GITHUB_REF##*/}
-          docker push ghcr.io/cpwc/aws-quota-checker:latest
-          docker push ghcr.io/cpwc/aws-quota-checker:${GITHUB_REF##*/}
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: latest,${GITHUB_REF##*/}
+          platforms: linux/amd64,linux/arm64
