--- a/charts/aws-quota-checker/values.yaml
+++ b/charts/aws-quota-checker/values.yaml
@@ -30,3 +30,8 @@ podMonitor:
   additionalLabels: {}
   # interval is the interval between two metrics scrapes. Defaults to 30s
   interval: 30s
+
+# This gets passed to the container as arguments, add the metrics you want to collect.
+args:
+  - prometheus-exporter
+  - vpc_count,ec2_eip_count,vpc_nat_gateways_per_availability_zone
