feat: add metrics via values file using extraArgs

--- a/charts/aws-quota-checker/values.yaml
+++ b/charts/aws-quota-checker/values.yaml
@@ -32,6 +32,5 @@ podMonitor:
   interval: 30s
 
 # This gets passed to the container as arguments, add the metrics you want to collect.
-args:
-  - prometheus-exporter
+extraArgs:
   - vpc_count,ec2_eip_count,vpc_nat_gateways_per_availability_zone
