--- a/charts/aws-quota-checker/templates/deployment.yaml
+++ b/charts/aws-quota-checker/templates/deployment.yaml
@@ -18,7 +18,8 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           args:
-            {{- range .Values.args }}
+            - prometheus-exporter
+            {{- range .Values.extraArgs }}
             - {{ . }}
             {{- end }}
           ports:
